rails-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rails-svc
spec:
  selector:
    app: rails-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
