nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: "kube.cindyliu923.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rails-svc
            port:
              number: 80
  tls:
  - hosts:
    - kube.cindyliu923.com
    secretName: kube-cindyliu923
